[gd_scene load_steps=11 format=3 uid="uid://g28updgkaqym"]

[ext_resource type="Script" uid="uid://6seakwoxk527" path="res://scripts/egg-collection.gd" id="1_w0elb"]
[ext_resource type="PackedScene" uid="uid://b085dkuk7uq8r" path="res://scenes/mini_menu.tscn" id="2_1mlyo"]
[ext_resource type="Texture2D" uid="uid://b5bkddainp227" path="res://art/props/Nest Background.png" id="2_m11xh"]
[ext_resource type="PackedScene" uid="uid://djtd6vihyb4ph" path="res://scenes/nest.tscn" id="3_r7ts3"]
[ext_resource type="Texture2D" uid="uid://dlsooa8vkecjj" path="res://art/props/nest1.png" id="6_1xm0k"]
[ext_resource type="Texture2D" uid="uid://dskie2krx7h0o" path="res://art/props/nest2.png" id="7_fcwn1"]
[ext_resource type="Texture2D" uid="uid://bunldmv1vprgp" path="res://art/icons/shelf_dragger.png" id="7_vclnr"]
[ext_resource type="Texture2D" uid="uid://doyl7ideois6k" path="res://art/props/nestback.png" id="8_6o0hv"]
[ext_resource type="PackedScene" uid="uid://bi7vr8n2y7b5" path="res://scenes/egg_shelf.tscn" id="8_cwp2l"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_18w84"]

[node name="Egg Collection" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_w0elb")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_m11xh")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = -176.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="HSplitContainer" type="HSplitContainer" parent="BoxContainer"]
texture_filter = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/touch_dragger = ExtResource("7_vclnr")
theme_override_styles/split_bar_background = SubResource("StyleBoxEmpty_18w84")
split_offset = 200
dragger_visibility = 1
touch_dragger_enabled = true
drag_area_margin_begin = -80
drag_area_offset = -18

[node name="Egg Shelf" parent="BoxContainer/HSplitContainer" instance=ExtResource("8_cwp2l")]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer/HSplitContainer"]
custom_minimum_size = Vector2(952, 0)
layout_mode = 2

[node name="Nest1" parent="." instance=ExtResource("3_r7ts3")]
layout_mode = 0
offset_left = 235.0
offset_top = 262.0
offset_right = 560.0
offset_bottom = 518.0
texture = ExtResource("6_1xm0k")

[node name="Nest2" parent="." instance=ExtResource("3_r7ts3")]
layout_mode = 0
offset_left = 524.0
offset_top = 359.0
offset_right = 849.0
offset_bottom = 615.0
texture = ExtResource("7_fcwn1")

[node name="Nest3" parent="." instance=ExtResource("3_r7ts3")]
layout_mode = 0
offset_left = 463.0
offset_top = 107.0
offset_right = 806.0
offset_bottom = 363.0
texture = ExtResource("8_6o0hv")

[node name="Mini Menu" parent="." instance=ExtResource("2_1mlyo")]
layout_mode = 0
offset_left = 802.0
offset_right = 1152.0

[connection signal="selection" from="Nest1" to="." method="_on_nest_selection"]
[connection signal="selection" from="Nest2" to="." method="_on_nest_2_selection"]
[connection signal="selection" from="Nest3" to="." method="_on_nest_3_selection"]
